# currency_service

./: .coverage  .gitignore  README.md  pyproject.toml
.venv_backup/: pyvenv.cfg
currency_service/: api.py  config.py  main.py  storage.py  updater.py
currency_service/rates/: base.py  cbr.py
tests/: test_api.py  test_cli.py
