[project]
name = "currency_service"
version = "0.1.0"
description = "Async currency tracking service with REST API"
authors = [
  { name = "Artem Vologdin", email = "vologdinartem14@gmail.com" }
]
readme = "README.md"
requires-python = ">=3.8,<3.12"
dependencies = [
  "fastapi",
  "uvicorn[standard]",
  "httpx",
  "pydantic>=1.10",
]

[tool.poetry.scripts]
currency_service = "currency_service.main:main"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0"
pytest-asyncio = "^0.23.0"
httpx = "^0.27.0"
mypy = "*"
black = "*"
isort = "*"


